# TinyIM

./: .gitignore  CMakeLists.txt  README.md  TESTING.md
api/: CMakeLists.txt
api/v1/: auth.proto  chat.proto  gateway.proto  status.proto
clients/web/: app.js  chat.html  index.html
configs/: config.json  config_single.json
infra/compose/: docker-compose-ha.yml  docker-compose-single.yml  docker-compose.yml
infra/docker/: Dockerfile
infra/mysql/: init.sql  master.cnf  slave.cnf
infra/nginx/: nginx.conf
infra/scripts/: build_backend.bat  enter_dev.bat  monitor_logs.bat  reset_db_ha.bat  reset_db_single.bat  run_backend_ha.bat  run_backend_single.bat  run_services.sh  run_tests.bat  setup_mysql_replication.bat  start_dev.bat  start_ha.bat  start_single.bat  stop_dev.bat
note/: 0.基础知识概论.md  1.认识与编写 Proto 文件.md
services/auth/: CMakeLists.txt  main.cpp  status_client.hpp
services/chat/: CMakeLists.txt  main.cpp
services/common/: CMakeLists.txt
services/common/config/: config.hpp
services/common/db/: mysql_client.hpp  redis_client.hpp
services/common/log/: logger.cpp  logger.hpp
services/common/utils/: password.hpp
services/gateway/: CMakeLists.txt  auth_client.hpp  chat_client.hpp  http_session.hpp  main.cpp  server_context.hpp  session_manager.hpp  websocket_session.hpp
services/status/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/functional/: main.cpp  test_features.cpp  test_offline_msgs.cpp  test_status.cpp
tests/stress/: load_generator.cpp
